@@ -1,6 +1,8 @@
 Version 1.5 (2011-XX-XX)
 ------------------------------------------------------------------------------
 
+* `rbind.fill` preserves missing factor levels
+
 Version 1.4 (2011-01-03)
 ------------------------------------------------------------------------------
 
